# helpful-tidbits

./: .gitignore  README.md
projects/: README
projects/treysh-c/: treysh.c
projects/treysh-rs/: Cargo.toml
projects/treysh-rs/src/: main.rs
projects/trip/: Cargo.toml
projects/trip/src/: helpers.rs  main.rs  packet.rs  types.rs
scripts/: README  cl-host-checker.py  compare-macs.py  evpn_mac_consistency_check.py  mac.sh  punt_everything.py  set_tunnel_sip.py
