[package]
name = "trip"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
ipnet = "2.11.0"
libc = "0.2.169"
serde = { version = "1.0.217", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-envlogger = "2.2.0"
slog-term = "2.9.1"
socket2 = { version = "0.5.7", features = ["all"] }
